<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.josenegretti.carnavaldeoruro2016.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/carnaval" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sabado_main"
        android:id="@+id/btSabado"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:textAllCaps="true"
        android:textSize="50sp"
        android:background="@color/colorCyan"
        android:onClick="onClickRolSabado"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/domingo_main"
        android:id="@+id/btDomingo"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:textSize="50sp"
        android:textAllCaps="true"
        android:background="@color/orange600"
        android:onClick="onClickRolDomingo"
        android:layout_above="@+id/button7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="81dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/recorrido_main"
        android:id="@+id/button7"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:textSize="50sp"
        android:textAllCaps="true"
        android:background="@color/red800"
        android:onClick="onClickRolDomingo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
